--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-hi :)
+<!DOCTYPE html>
+<html>
+
+<head>
+  <h1> this is heading 1</h1>
+  <h2> this is heading 2</h2>
+  <h3> this is heading 3</h3>
+  <h4> this is heading 4</h4>
+  <h5> this is heading 5</h5>
+  <h6> this is heading 6</h6>
+
+</head>
+
+<body>
+<p> I like turtles </p>
+<a href="https://www.netflix.com/watch/80009530?trackId=155573560">turtles</a>
+</body>
+
+</html>
