--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <!-- This is the heading tag-->
+
   <h1> this is heading 1</h1>
   <h2> this is heading 2</h2>
   <h3> this is heading 3</h3>
@@ -13,7 +15,86 @@
 
 <body>
 <p> I like turtles </p>
+<!-- This is paragraph tag where you can write a paragraph-->
+
 <a href="https://www.netflix.com/watch/80009530?trackId=155573560">turtles</a>
+<!-- This is an attricbute, where you can place a link in a word-->
+
+<img src="../image/wolf.jpg" alt="Boof woof">
+<!-- img src is where you add pictures-->
+
+<button>CLick me (just a button) </button>
+<!-- button is a button that you can click on-->
+
+<a href="https://comicvine.gamespot.com/images/1300-4726931" title="Go to comicvine HTML section"><button>Click me</button></a>
+<a href="https://comicvine.gamespot.com/images/1300-4726931" target= "_blank"><button>Click me (_blank) </button></a>
+<a href="https://comicvine.gamespot.com/images/1300-4726931" target= "_self"><button>Click me (_self) </button></a>
+<a href="https://comicvine.gamespot.com/images/1300-4726931" target= "_parent"><button>Click me (_parent) </button></a>
+<a href="https://comicvine.gamespot.com/images/1300-4726931" target= "_top"><button>Click me (_top) </button></a>
+<a href="https://comicvine.gamespot.com/images/1300-4726931">
+  <img src="../image/instagram_icon.png" alt="Insta">
+"</a>
+<!-- href tag is inputted into the button function, so everytime you click the button.
+The button will take you to the link-->
+
+<h2> An Unordered HTML List</h2>
+
+<!-- h2 is a title tag-->
+<ul>
+  <!-- ul is a tag that changes the order into bulletin points-->
+
+  <li>Candy</li>
+    <li>Cake</li>
+    <li>Sweets</li>
+</ul>
+<h2> An ordered HTML List</h2>
+<ol>
+  <!-- ol is a tag that changes the order into numbers-->
+
+  <li>Candy</li>
+    <li>Cake</li>
+    <li>Sweets</li>
+</ol>
+
+<p> Potato Potato <br>
+  <!-- br makes an indent in the website-->
+  I like potato
+<pre> I hate potatoes </p>
+<!-- pre changes the font-->
+
+<h1> Html formatting</h1>
+<b> Program bold</b>
+<strong> Program strong</strong>
+<i> Program Italic</i>
+<em> Program emphasized</em>
+<h2> PROGRAM <small>Small</small> </h2>
+<h2> PROGRAM <mark>Mark</mark> </h2>
+<p> I like cake<del>I donut like donuts </del> </p>
+<p> I refuse to <ins> eat</ins> rice </p>
+<p> I like <sub> ducks </sub> </p>
+<p> I like <sup> ducks </sup> </p>
+
+<h2> Html Quotation and Citation Elements</h2>
+<p> According to my research,<q> ice cream is one of the top sellers in America!</q> </p>
+<p> From ohmy.disney.com </p>
+<blockquote cite= "https://ohmy.disney.com/movies/2015/10/28/the-definitive-ranking-of-jack-sparrow-quotes/">
+  “Not all treasure is silver and gold, mate.” ￼ Jack's deepest and most profound quote
+</blockquote>
+<p> This is the best <abbr title="Makeup Master Mind">MMM</abbr> show that ever came out.</p>
+<p>
+  <address>
+    Written by Rachel Lee.<br>
+    Visit us at:<br>
+    Example.com<br>
+    Santa 929, New York<br>
+    USA
+  </address>
+  <p> The Big Foot Sighting.</p>
+  <p><cite> Big Foot</cite></p>
+<p> I like 2 ducks</P>
+  <bdo dir="rtl">I like 2 ducks</bdo>
+
+
 </body>
 
 </html>
