--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 <!-- This is an attricbute, where you can place a link in a word-->
 
 <img src="../image/wolf.jpg" alt="Boof woof">
+<img src="../image/Explosian_kitty.gif" alt="Explosian_kitty">
+<img src="../image/Room.jpg" alt="Room" usemap="#Room">
+<map name="Room">
+<area shape="rect" coords="540, 600, 480, 270" href="https://www.pinterest.com/pin/557039047632669143/">
+<area shape="circle" coords="120, 530, 20" href="https://www.archiproducts.com/en/products/brunner/stackable-plastic-chair-a-chair-plastic-chair_114868">
+</map>
 <!-- img src is where you add pictures-->
 
 <button>CLick me (just a button) </button>
@@ -33,6 +39,7 @@
 <a href="https://comicvine.gamespot.com/images/1300-4726931" target= "_top"><button>Click me (_top) </button></a>
 <a href="https://comicvine.gamespot.com/images/1300-4726931">
   <img src="../image/instagram_icon.png" alt="Insta">
+
 "</a>
 <!-- href tag is inputted into the button function, so everytime you click the button.
 The button will take you to the link-->
