--- a/index.html
+++ b/index.html
@@ -101,6 +101,49 @@ The button will take you to the link-->
 <p> I like 2 ducks</P>
   <bdo dir="rtl">I like 2 ducks</bdo>
 
+<h2> Table</h2>
+<table>
+  <caption> Fruit earnings </caption>
+<tr>
+<th> Fruit name </th>
+<th> Amount </th>
+<th> Price </th>
+<th colspan="2"> Location </th>
+
+</tr>
+<tr>
+  <td> Apples </td>
+  <td> 6 per bag </td>
+  <td> $7.99 </td>
+  <td> New York </td>
+  <td> California </td>
+</tr>
+<tr>
+  <td> Strawberries </td>
+  <td> 9 per bag </td>
+  <td> $12.99 </td>
+  <td> Japan </td>
+  <td> Korea </td>
+</tr>
+<tr>
+  <td> Lemon </td>
+  <td> 8 per bag </td>
+  <td> $9.99 </td>
+  <td> Virgina </td>
+  <td> New York </td>
+</tr>
+<tr>
+  <th rowspan="2"> Astro's Company </th>
+    <td> Water company </td>
+    <td> Wind company </td>
+    <td> Weather company </td>
+</tr>
+<tr>
+  <td> Fire company </td>
+  <td> Earth company </td>
+  <td> Electricity company </td>
+</tr>
+</table>
 
 </body>
 
