--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <a href="https://comicvine.gamespot.com/images/1300-4726931" target= "_self"><button>Click me (_self) </button></a>
 <a href="https://comicvine.gamespot.com/images/1300-4726931" target= "_parent"><button>Click me (_parent) </button></a>
 <a href="https://comicvine.gamespot.com/images/1300-4726931" target= "_top"><button>Click me (_top) </button></a>
-<a href="https://comicvine.gamespot.com/images/1300-4726931">
+<a href="https://comicvine.gamespot.com/images/1300-4726931"
   <img src="../image/instagram_icon.png" alt="Insta">
 
 "</a>
@@ -71,24 +71,35 @@ The button will take you to the link-->
 
 <h1> Html formatting</h1>
 <b> Program bold</b>
+<!-- b makes the words bold and thick -->
 <strong> Program strong</strong>
+<!-- strong makes the words bold and thick -->
 <i> Program Italic</i>
+<!-- i slighty slants the words -->
 <em> Program emphasized</em>
+<!-- em slighty slants the words -->
 <h2> PROGRAM <small>Small</small> </h2>
 <h2> PROGRAM <mark>Mark</mark> </h2>
 <p> I like cake<del>I donut like donuts </del> </p>
+<!-- del crosses out the words -->
 <p> I refuse to <ins> eat</ins> rice </p>
+<!-- ins insert words-->
 <p> I like <sub> ducks </sub> </p>
+<!-- sub makes the word smaller and above -->
 <p> I like <sup> ducks </sup> </p>
+<!-- sup makes the word smaller and below -->
 
 <h2> Html Quotation and Citation Elements</h2>
 <p> According to my research,<q> ice cream is one of the top sellers in America!</q> </p>
+<!-- q adds quotation marks around the words -->
 <p> From ohmy.disney.com </p>
 <blockquote cite= "https://ohmy.disney.com/movies/2015/10/28/the-definitive-ranking-of-jack-sparrow-quotes/">
   “Not all treasure is silver and gold, mate.” ￼ Jack's deepest and most profound quote
 </blockquote>
+<!-- blockquote adds a link to the quote -->
 <p> This is the best <abbr title="Makeup Master Mind">MMM</abbr> show that ever came out.</p>
 <p>
+  <!-- abbr adds in the short name as a replacement -->
   <address>
     Written by Rachel Lee.<br>
     Visit us at:<br>
@@ -96,19 +107,23 @@ The button will take you to the link-->
     Santa 929, New York<br>
     USA
   </address>
+  <!-- address is a font used for addresses -->
   <p> The Big Foot Sighting.</p>
   <p><cite> Big Foot</cite></p>
 <p> I like 2 ducks</P>
   <bdo dir="rtl">I like 2 ducks</bdo>
+  <!-- dir makes the words and order backwords  -->
 
 <h2> Table</h2>
 <table>
   <caption> Fruit earnings </caption>
 <tr>
+  <!-- tr is to define a row -->
 <th> Fruit name </th>
 <th> Amount </th>
 <th> Price </th>
 <th colspan="2"> Location </th>
+<!-- th makes a cell span many columns-->
 
 </tr>
 <tr>
@@ -117,6 +132,8 @@ The button will take you to the link-->
   <td> $7.99 </td>
   <td> New York </td>
   <td> California </td>
+  <!-- td is the information -->
+
 </tr>
 <tr>
   <td> Strawberries </td>
@@ -134,6 +151,7 @@ The button will take you to the link-->
 </tr>
 <tr>
   <th rowspan="2"> Astro's Company </th>
+  <!-- rowspan makes make a cell span many rows -->
     <td> Water company </td>
     <td> Wind company </td>
     <td> Weather company </td>
@@ -144,7 +162,7 @@ The button will take you to the link-->
   <td> Electricity company </td>
 </tr>
 </table>
-
+<!-- the table is a math table-->
 </body>
 
 </html>
