--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@ The button will take you to the link-->
 
   <li>Candy</li>
     <li>Cake</li>
+      <ul>
+        <li> Chocolate cake</li>
+        <li> Strawberry cake</li>
+      </ul>
     <li>Sweets</li>
 </ul>
 <h2> An ordered HTML List</h2>
@@ -60,8 +64,20 @@ The button will take you to the link-->
 
   <li>Candy</li>
     <li>Cake</li>
+    <ol type="a">
+      <li> Chocolate cake</li>
+      <li> Strawberry cake</li>
+    </ol>
     <li>Sweets</li>
 </ol>
+
+<h2> A Description List </h2>
+<di>
+<dt> Cake's </dt>
+<dd>-Chocolate, Vanilla, and Strawberry</dd>
+<dt> Ice cream's</dt>
+<dd>-Mint, Chocolate chip, and Coffee</dd>
+</di>
 
 <p> Potato Potato <br>
   <!-- br makes an indent in the website-->
