--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@ The button will take you to the link-->
 
 <h2> A Description List </h2>
 <di>
+  <!--defines the description list-->
 <dt> Cake's </dt>
+<!--describes each term-->
 <dd>-Chocolate, Vanilla, and Strawberry</dd>
 <dt> Ice cream's</dt>
 <dd>-Mint, Chocolate chip, and Coffee</dd>
