--- a/index.html
+++ b/index.html
@@ -69,16 +69,18 @@ The button will take you to the link-->
       <li> Strawberry cake</li>
     </ol>
     <li>Sweets</li>
+    <!-- il defines a list item-->
 </ol>
 
 <h2> A Description List </h2>
 <di>
-  <!--defines the description list-->
+  <!-- di defines the description list-->
 <dt> Cake's </dt>
-<!--describes each term-->
+<!-- dt describes each term-->
 <dd>-Chocolate, Vanilla, and Strawberry</dd>
 <dt> Ice cream's</dt>
 <dd>-Mint, Chocolate chip, and Coffee</dd>
+<!-- dd used to describe a term/name in a description list-->
 </di>
 
 <p> Potato Potato <br>
@@ -181,6 +183,9 @@ The button will take you to the link-->
 </tr>
 </table>
 <!-- the table is a math table-->
+
+<h2> Block and Inline Element </h2>
+
 </body>
 
 </html>
