--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 
 <head>
+  <!-- Title represents the theme or subject-->
+  <title> What's the title of this webpage </title>
+
   <!-- This is the heading tag-->
+
 
   <h1> this is heading 1</h1>
   <h2> this is heading 2</h2>
