--- a/index.html
+++ b/index.html
@@ -18,55 +18,55 @@
 </head>
 
 <body>
-<p> I like turtles </p>
-<!-- This is paragraph tag where you can write a paragraph-->
+  <p> I like turtles </p>
+  <!-- This is paragraph tag where you can write a paragraph-->
 
-<a href="https://www.netflix.com/watch/80009530?trackId=155573560">turtles</a>
-<!-- This is an attricbute, where you can place a link in a word-->
+  <a href="https://www.netflix.com/watch/80009530?trackId=155573560">turtles</a>
+  <!-- This is an attribute, where you can place a link in a word-->
+  <!-- href can track down the file name -->
 
-<img src="../image/wolf.jpg" alt="Boof woof">
-<img src="../image/Explosian_kitty.gif" alt="Explosian_kitty">
-<img src="../image/Room.jpg" alt="Room" usemap="#Room">
-<map name="Room">
-<area shape="rect" coords="384, 20, 1530, 850" href="https://www.pinterest.com/pin/557039047632669143/">
-<area shape="circle" coords="1110, 610, 130" href="https://www.archiproducts.com/en/products/brunner/stackable-plastic-chair-a-chair-plastic-chair_114868">
-</map>
-<!-- img src is where you add pictures-->
+  <img src="../image/wolf.jpg" alt="Boof woof">
+  <img src="../image/Explosian_kitty.gif" alt="Explosian_kitty">
+  <img src="../image/Room.jpg" alt="Room" usemap="#Room">
+  <map name="Room">
+    <area shape="rect" coords="384, 20, 1530, 850" href="https://www.pinterest.com/pin/557039047632669143/">
+    <area shape="circle" coords="1110, 610, 130" href="https://www.archiproducts.com/en/products/brunner/stackable-plastic-chair-a-chair-plastic-chair_114868">
+  </map>
+  <!-- img src is where you add pictures-->
 
-<button>CLick me (just a button) </button>
-<!-- button is a button that you can click on-->
+  <button>CLick me (just a button) </button>
+  <!-- button is a button that you can click on-->
 
-<a href="https://comicvine.gamespot.com/images/1300-4726931" title="Go to comicvine HTML section"><button>Click me</button></a>
-<a href="https://comicvine.gamespot.com/images/1300-4726931" target= "_blank"><button>Click me (_blank) </button></a>
-<a href="https://comicvine.gamespot.com/images/1300-4726931" target= "_self"><button>Click me (_self) </button></a>
-<a href="https://comicvine.gamespot.com/images/1300-4726931" target= "_parent"><button>Click me (_parent) </button></a>
-<a href="https://comicvine.gamespot.com/images/1300-4726931" target= "_top"><button>Click me (_top) </button></a>
-<a href="https://comicvine.gamespot.com/images/1300-4726931"
-  <img src="../image/instagram_icon.png" alt="Insta">
+  <a href="https://comicvine.gamespot.com/images/1300-4726931" title="Go to comicvine HTML section"><button>Click me</button></a>
+  <a href="https://comicvine.gamespot.com/images/1300-4726931" target="_blank"><button>Click me (_blank) </button></a>
+  <a href="https://comicvine.gamespot.com/images/1300-4726931" target="_self"><button>Click me (_self) </button></a>
+  <a href="https://comicvine.gamespot.com/images/1300-4726931" target="_parent"><button>Click me (_parent) </button></a>
+  <a href="https://comicvine.gamespot.com/images/1300-4726931" target="_top"><button>Click me (_top) </button></a>
+  <a href="https://comicvine.gamespot.com/images/1300-4726931" <img src="../image/instagram_icon.png" alt="Insta">
 
-"</a>
-<!-- href tag is inputted into the button function, so everytime you click the button.
+    "</a>
+  <!-- href tag is inputted into the button function, so everytime you click the button.
 The button will take you to the link-->
 
-<h2> An Unordered HTML List</h2>
+  <h2> An Unordered HTML List</h2>
 
-<!-- h2 is a title tag-->
-<ul>
-  <!-- ul is a tag that changes the order into bulletin points-->
+  <!-- h2 is a title tag-->
+  <ul>
+    <!-- ul is a tag that changes the order into bulletin points-->
 
-  <li>Candy</li>
+    <li>Candy</li>
     <li>Cake</li>
-      <ul>
-        <li> Chocolate cake</li>
-        <li> Strawberry cake</li>
-      </ul>
+    <ul>
+      <li> Chocolate cake</li>
+      <li> Strawberry cake</li>
+    </ul>
     <li>Sweets</li>
-</ul>
-<h2> An ordered HTML List</h2>
-<ol>
-  <!-- ol is a tag that changes the order into numbers-->
+  </ul>
+  <h2> An ordered HTML List</h2>
+  <ol>
+    <!-- ol is a tag that changes the order into numbers-->
 
-  <li>Candy</li>
+    <li>Candy</li>
     <li>Cake</li>
     <ol type="a">
       <li> Chocolate cake</li>
@@ -74,23 +74,23 @@ The button will take you to the link-->
     </ol>
     <li>Sweets</li>
     <!-- il defines a list item-->
-</ol>
+  </ol>
 
-<h2> A Description List </h2>
-<di>
-  <!-- di defines the description list-->
-<dt> Cake's </dt>
-<!-- dt describes each term-->
-<dd>-Chocolate, Vanilla, and Strawberry</dd>
-<dt> Ice cream's</dt>
-<dd>-Mint, Chocolate chip, and Coffee</dd>
-<!-- dd used to describe a term/name in a description list-->
-</di>
+  <h2> A Description List </h2>
+  <di>
+    <!-- di defines the description list-->
+    <dt> Cake's </dt>
+    <!-- dt describes each term-->
+    <dd>-Chocolate, Vanilla, and Strawberry</dd>
+    <dt> Ice cream's</dt>
+    <dd>-Mint, Chocolate chip, and Coffee</dd>
+    <!-- dd used to describe a term/name in a description list-->
+  </di>
 
-<p> Potato Potato <br>
-  <!-- br makes an indent in the website-->
-  I like potato
-<pre> I hate potatoes </p>
+  <p> Potato Potato <br>
+    <!-- br makes an indent in the website-->
+    I like potato
+  <pre> I hate potatoes </p>
 <!-- pre changes the font-->
 
 <h1> Html formatting</h1>
