--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <!-- Title represents the theme or subject-->
   <title> What's the title of this webpage </title>
+<meta charset="UTF-8">
+<!-- Meta charset displays characters-->
 
   <!-- This is the heading tag-->
-
 
   <h1> this is heading 1</h1>
   <h2> this is heading 2</h2>
@@ -188,7 +189,31 @@ The button will take you to the link-->
 </table>
 <!-- the table is a math table-->
 
-<h2> Block and Inline Element </h2>
+<h2> Symbol </h2>
+
+<pre> <p> FOR ALL: &forall; &#8704;
+PARTIAL DIFFERENTIAL: &part; &#8706;
+THERE EXIST: &exist; &#808;
+EMPTY SETS: &empty; &#8707;
+NABLA: &nabla; &#8711;
+ELEMENT OF: &isin; &#8712;
+NOT AN ELEMENT OF: &notin; &#8713;
+CONTAINS AS MEMBER: &ni; &#8715;
+N-ARY PRODUCT: &prod; &#8719;
+N-ARY SUMMATION: &sum; &#8721;
+
+<h2> Emojis </h2>
+<pre> <p> &#128507;
+  &#128508;
+  &#128509;
+  &#128510;
+  &#128511;
+  &#128512;
+  &#128513;
+  &#128514;
+  &#128515;
+  &#128516;
+  &#128517; </p> </pre>
 
 </body>
 
