--- a/index.html
+++ b/index.html
@@ -202,6 +202,19 @@ CONTAINS AS MEMBER: &ni; &#8715;
 N-ARY PRODUCT: &prod; &#8719;
 N-ARY SUMMATION: &sum; &#8721;
 
+COPYRIGHT SIGN: &#169;	&copy;	
+REGISTERED SIGN: &#174;	&reg;
+EURO SIGN: &#8364;	&euro;
+TRADEMARK: &#8482;	&trade;
+LEFTWARDS ARROW: &#8592;	&larr;
+UPWARDS ARROW: &#8593;	&uarr;
+RIGHTWARDS ARROW: &#8594;	&rarr;
+DOWNWARDS ARROW: &#8595;	&darr;
+BLACK SPADE SUIT: &#9824;	&spades;
+BLACK CLUB SUIT: &#9827;	&clubs;
+BLACK HEART SUIT: &#9829;	&hearts;
+BLACK DIAMOND SUIT: &#9830;	&diams;
+
 <h2> Emojis </h2>
 <pre> <p> &#128507;
   &#128508;
